2005-05-04  Carlos Garnacho Parro  <carlosg@gnome.org>

	* SharesList.pm: adapted signal emitting to new Dbus bindings API
	* Users/Shells.pm: separated shells handling from Users/Users.pm,
	implemented set()
	* ShellsList.pm: use new .pm for shells, monitor /etc/shells
	* Utils/Monitor.pm: accept both arrays and single file names

2005-05-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Users/Users.pm: moved from users-conf.in, removed some code that
	should not be used now
	* users-conf.in: removed
	* ShellsList.pm: object for gettings the available shells
	* Loader.pl.in: add ShellsList to the init code
	* ServicesList.pm: put object path correctly
	* test-backends: put object paths correctly
	* Init/Services.pm: forgot to rename namespace to Init::Services

2005-04-29  Carlos Garnacho Parro  <carlosg@gnome.org>

	* SharesList.pm: put object path correctly
	* configure.in: use the 2.0 .pc file, bumped version to 1.9.x
	* system-tools-backends.pc.in: removed
	* system-tools-backends-2.0.pc.in: added

2005-04-27  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Init/Services.pm: added, previously known as service.pl.in
	* service.pl.in: removed
	* ServicesList.pm: added, DBus object for accessing services at init
	* Loader.pl.in: added ServicesList
	* SharesList.pm: updated to latest DBus bindings api
	* network.pl.in: use Init::Services
	* test-backends: don't recurse infinitely with arrays, other
	improvements

2005-04-21  Carlos Garnacho Parro  <carlosg@gnome.org>

	* test-backends: Added simple perl script for querying the backends 
	data

2005-04-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Utils/Monitor.pm: New file for monitoring file changes and emitting
	DBus signals according to this
	* Loader.pl.in: added function for monitoring files in a timeout
	* SharesList.pm: monitor SMB and NFS files and emit "changed" signal
	* Shares/Exports.pm: misc changes

2005-04-20  Carlos Garnacho Parro  <carlosg@gnome.org>
